# hw06-wesleycheung99

./: .buildinfo  Makefile  README.html  _config.yml  _toc.yml  conf.py  environment.yml  genindex.html  hw06-description.html  index.html  index.ipynb  objects.inv  search.html  searchindex.js  setup.cfg
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.pytest_cache/: README.doctree
.github/workflows/: book.yml
.pytest_cache/: README.html
_build/html/: .buildinfo  README.html  genindex.html  hw06-description.html  index.html  search.html  searchindex.js
_build/html/.doctrees/: environment.pickle  hw06-description.doctree
_build/html/_sources/: README.md  hw06-description.md  index.ipynb
_build/jupyter_execute/: index.ipynb  index.py
_sources/: README.md  index.ipynb
ligotools/: utils.py
ligotools/tests/: test_readligo.py  test_utils.py
